# think-spiral-simulator

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.txt  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP.md  next.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: deploy-backend-hf-space.yml  deploy-frontend-pages.yml
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py  main.py
backend/app/models/: __init__.py  spiral.py
backend/app/routes/: __init__.py  history.py  insights.py  reality_check.py  simulation.py
backend/app/schemas/: __init__.py  spiral.py
backend/app/services/: ai_service.py
components/: BreakSpiralCard.tsx  CompareModesCard.tsx  EmotionChart.tsx  InputBox.tsx  ModeSelector.tsx  ShareCard.tsx  SpiralTimeline.tsx
components/ui/: button.tsx  card.tsx  textarea.tsx
lib/: api.ts  types.ts
scripts/: dev.sh  setup-backend.sh
