[project]
name = "thinkspiral-backend"
version = "0.1.0"
description = "ThinkSpiral Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
